--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spring": "^9.3.0",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.1",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
