updates snackbar positioning

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+~$Progetto Finale di Markiyan Kmit.pptx
+Progetto Finale di Markiyan Kmit.pptx
 
 # testing
 /coverage
